set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")

macro(example prefix)
    add_executable(${prefix}_example ${prefix}_example.c)
    target_link_libraries(${prefix}_example libaesni)
endmacro()

example(aes128ecb)
example(aes128cbc)
example(aes128cfb)
example(aes192ecb)
example(aes192cbc)
example(aes192cfb)
example(aes256ecb)
example(aes256cbc)
example(aes256cfb)
