set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")

macro(example prefix)
    add_executable(example_${prefix} ${prefix}.c)
    target_link_libraries(example_${prefix} libaesni)
    set_target_properties(example_${prefix} PROPERTIES OUTPUT_NAME ${prefix})
endmacro()

example(aes128ecb)
example(aes128cbc)
example(aes128cfb)
example(aes128ofb)
example(aes128ctr)
example(aes192ecb)
example(aes192cbc)
example(aes192cfb)
example(aes192ofb)
example(aes192ctr)
example(aes256ecb)
example(aes256cbc)
example(aes256cfb)
example(aes256ofb)
example(aes256ctr)
