find_package(Boost REQUIRED COMPONENTS program_options)

add_executable(util_aes_encrypt_block aes_encrypt_block.cpp aes_common.hpp)
target_include_directories(util_aes_encrypt_block PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(util_aes_encrypt_block libaesni libaesnixx ${Boost_LIBRARIES})
set_target_properties(util_aes_encrypt_block PROPERTIES OUTPUT_NAME aes_encrypt_block)

add_executable(util_aes_decrypt_block aes_decrypt_block.cpp aes_common.hpp)
target_include_directories(util_aes_decrypt_block PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(util_aes_decrypt_block libaesni libaesnixx ${Boost_LIBRARIES})
set_target_properties(util_aes_decrypt_block PROPERTIES OUTPUT_NAME aes_decrypt_block)
